--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,8 @@ lib_deps =
   adafruit/Adafruit NeoPixel@^1.11.0
   adafruit/Adafruit GFX Library@^1.11.5
   adafruit/Adafruit NeoMatrix@^1.2.5
+
+build_flags= 
+  -D USE_HM10_DRIVER
+
+monitor_speed= 115200
