latest speed improvements

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
   adafruit/Adafruit NeoPixel@^1.11.0
   adafruit/Adafruit GFX Library@^1.11.5
   adafruit/Adafruit NeoMatrix@^1.2.5
+  paulstoffregen/AltSoftSerial
 
 build_flags= 
   -D USE_HM10_DRIVER
